--- a/website/marketplace.html
+++ b/website/marketplace.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Clockwork Marketplace | Minecraft Server Plugins</title>
-  <meta name="description" content="Clockwork Plugin Marketplace: finde, vergleiche und installiere leistungsstarke Plugins fuer die Clockwork Server Software." />
+  <meta name="description" content="Clockwork Plugin Marketplace: discover, compare, and install powerful plugins for Clockwork server software." />
   <link rel="icon" type="image/png" href="../logos/logo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
-<body>
+<body class="market-page">
   <div class="scroll-progress" aria-hidden="true"></div>
   <div class="bg-grid" aria-hidden="true"></div>
   <div class="bg-glow bg-glow-a" aria-hidden="true"></div>
@@ -22,73 +22,92 @@
       <img class="brand-banner" src="../logos/banner.png" alt="Clockwork banner" />
     </div>
     <div class="header-actions">
-      <a class="btn btn-ghost" href="./index.html">Website Home</a>
-      <a class="btn btn-primary" href="../docs/index.md">Docs</a>
+      <a class="btn btn-ghost" href="./index.html">Main</a>
+      <a class="btn btn-ghost" href="./marketplace.html">Marketplace</a>
+      <a class="btn btn-primary" href="./documentation.html">Documentation</a>
     </div>
   </header>
 
   <main class="layout">
     <aside class="sidebar reveal">
-      <label class="search-wrap" for="api-search">
-        <span>Marketplace Search</span>
-        <input id="api-search" type="search" placeholder="e.g. automation, economy, admin" />
-      </label>
-      <nav id="docs-nav">
-        <a href="#market-home">Home</a>
-        <a href="#market-featured">Featured</a>
-        <a href="#market-trending">Trending</a>
-        <a href="#market-new">New</a>
-      </nav>
+      <div class="filter-group">
+        <h3>Filters</h3>
+        <span class="filter-label">Version Track</span>
+        <label class="filter-check">
+          <input type="checkbox" class="market-version-filter" value="2.x" />
+          <span>2.x</span>
+        </label>
+        <label class="filter-check">
+          <input type="checkbox" class="market-version-filter" value="1.x" />
+          <span>1.x</span>
+        </label>
+        <label class="filter-check">
+          <input type="checkbox" class="market-version-filter" value="0.x" />
+          <span>0.x</span>
+        </label>
+      </div>
+
+      <div class="filter-group">
+        <span class="filter-label">Category</span>
+        <div class="market-filters" id="market-filters-sidebar">
+          <button class="market-chip active" type="button" data-filter="all">All</button>
+          <button class="market-chip" type="button" data-filter="automation">Automation</button>
+          <button class="market-chip" type="button" data-filter="worldgen">Worldgen</button>
+          <button class="market-chip" type="button" data-filter="economy">Economy</button>
+          <button class="market-chip" type="button" data-filter="combat">Combat</button>
+          <button class="market-chip" type="button" data-filter="admin">Admin</button>
+          <button class="market-chip" type="button" data-filter="network">Network</button>
+          <button class="market-chip" type="button" data-filter="ui">UI</button>
+        </div>
+      </div>
+
+      <div class="filter-group">
+        <label class="filter-label" for="market-rating-filter">Minimum Rating</label>
+        <select id="market-rating-filter" class="filter-select">
+          <option value="0">Any</option>
+          <option value="4.0">4.0+</option>
+          <option value="4.5">4.5+</option>
+          <option value="4.8">4.8+</option>
+        </select>
+      </div>
+
+      <button type="button" class="btn btn-ghost" id="market-reset-filters">Reset Filters</button>
     </aside>
 
     <div class="content">
-      <section id="market-home" class="doc-section reveal" data-api-item="clockwork marketplace plugins discover install">
+      <section id="market-home" class="doc-section reveal" data-api-item="clockwork marketplace plugins discover install filter search">
         <p class="eyebrow">MARKETPLACE</p>
         <h1>Clockwork Plugin Marketplace</h1>
         <p class="lead">
-          Entdecke Plugins im Modrinth-inspirierten Layout, mit Fokus auf Performance, Sicherheit und klare Operator-Infos.
+          One wide plugin board with fast search and category filters. Find plugins by name, tags, and descriptions in one place.
         </p>
         <div class="pill-row">
-          <span class="pill">One-click Install (WIP)</span>
-          <span class="pill">Version Compatibility</span>
+          <span class="pill">Unified Catalog</span>
+          <span class="pill">Live Search</span>
+          <span class="pill">Category Filters</span>
           <span class="pill">Security Signals</span>
-          <span class="pill">Runtime Ratings</span>
         </div>
         <p style="margin-top: 1rem;">
-          <a class="btn btn-ghost" href="./index.html#marketplace">Back to Website Section</a>
+          <a class="btn btn-ghost" href="./index.html#comparison">Back to Main</a>
         </p>
-      </section>
 
-      <section id="market-featured" class="doc-section reveal" data-api-item="featured plugins marketplace">
-        <div class="section-head">
-          <p class="eyebrow">FEATURED</p>
-          <h2>Curated Plugins</h2>
-        </div>
         <div class="market-shell">
           <div class="market-top">
-            <label class="market-search">
+            <label class="market-search" for="market-search-input">
               <span>Search Plugins</span>
-              <input type="search" placeholder="Search by name, tag or author..." />
+              <input id="market-search-input" type="search" placeholder="Search by name, tag, or description..." />
             </label>
-            <div class="market-filters">
-              <span class="market-chip active">All</span>
-              <span class="market-chip">Automation</span>
-              <span class="market-chip">Worldgen</span>
-              <span class="market-chip">Economy</span>
-              <span class="market-chip">Combat</span>
-              <span class="market-chip">Admin</span>
-            </div>
           </div>
 
-          <div class="market-grid">
-            <article class="market-card">
+          <div class="market-grid" id="market-grid">
+            <article class="market-card" data-name="Clockwork Create Lite" data-tags="automation machines recipes" data-description="Create-like machines, rotation systems, and recipe flow for the standalone core." data-version-track="0.x" data-rating="4.8">
               <div class="market-icon">CW</div>
               <div class="market-main">
                 <div class="market-head">
                   <h3>Clockwork Create Lite</h3>
                   <span class="market-version">v0.9.2</span>
                 </div>
-                <p>Create-artige Maschinen, Rotation und Rezeptfluss fuer Standalone-Core.</p>
+                <p>Create-like machines, rotation systems, and recipe flow for the standalone core.</p>
                 <div class="market-tags">
                   <span>automation</span>
                   <span>machines</span>
@@ -104,14 +123,14 @@
               </div>
             </article>
 
-            <article class="market-card">
+            <article class="market-card" data-name="Admin Guardrails" data-tags="admin security ops" data-description="Permission bundles, command auditing, and runtime recommendations for operators." data-version-track="2.x" data-rating="4.9">
               <div class="market-icon">AD</div>
               <div class="market-main">
                 <div class="market-head">
                   <h3>Admin Guardrails</h3>
                   <span class="market-version">v2.1.1</span>
                 </div>
-                <p>Permission bundles, command audit und runtime recommendations fuer Operatoren.</p>
+                <p>Permission bundles, command auditing, and runtime recommendations for operators.</p>
                 <div class="market-tags">
                   <span>admin</span>
                   <span>security</span>
@@ -126,36 +145,146 @@
                 <a class="btn btn-primary" href="#">Install</a>
               </div>
             </article>
+
+            <article class="market-card" data-name="NetX Economies" data-tags="economy admin network" data-description="Transactions, shop adapters, and profile-based pricing rules with audit trails." data-version-track="1.x" data-rating="4.6">
+              <div class="market-icon">NX</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>NetX Economies</h3>
+                  <span class="market-version">v1.4.0</span>
+                </div>
+                <p>Transactions, shop adapters, and profile-based pricing rules with audit trails.</p>
+                <div class="market-tags">
+                  <span>economy</span>
+                  <span>admin</span>
+                  <span>network</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>870K</strong>
+                <span>Downloads</span>
+                <strong>4.6</strong>
+                <span>Rating</span>
+                <a class="btn btn-primary" href="#">Install</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="WildGrid Terrain" data-tags="worldgen terrain biomes" data-description="Deterministic biome layers and custom world generation profiles for adventure servers." data-version-track="0.x" data-rating="4.7">
+              <div class="market-icon">WG</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>WildGrid Terrain</h3>
+                  <span class="market-version">v0.7.5</span>
+                </div>
+                <p>Deterministic biome layers and custom world generation profiles for adventure servers.</p>
+                <div class="market-tags">
+                  <span>worldgen</span>
+                  <span>terrain</span>
+                  <span>biomes</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>510K</strong>
+                <span>Downloads</span>
+                <strong>4.7</strong>
+                <span>Rating</span>
+                <a class="btn btn-primary" href="#">Install</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="Raid Director" data-tags="combat ai events" data-description="Encounter wave orchestration, raid scaling, and dynamic boss routing." data-version-track="1.x" data-rating="4.5">
+              <div class="market-icon">RD</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>Raid Director</h3>
+                  <span class="market-version">v1.0.0</span>
+                </div>
+                <p>Encounter wave orchestration, raid scaling, and dynamic boss routing.</p>
+                <div class="market-tags">
+                  <span>combat</span>
+                  <span>ai</span>
+                  <span>events</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>290K</strong>
+                <span>Downloads</span>
+                <strong>4.5</strong>
+                <span>Rating</span>
+                <a class="btn btn-primary" href="#">Install</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="Factory UI Kit" data-tags="ui automation tools" data-description="Reusable machine dashboards and operator panels for plugin UIs." data-version-track="0.x" data-rating="4.4">
+              <div class="market-icon">UI</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>Factory UI Kit</h3>
+                  <span class="market-version">v0.3.0</span>
+                </div>
+                <p>Reusable machine dashboards and operator panels for plugin UIs.</p>
+                <div class="market-tags">
+                  <span>ui</span>
+                  <span>automation</span>
+                  <span>tools</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>120K</strong>
+                <span>Downloads</span>
+                <strong>4.4</strong>
+                <span>Rating</span>
+                <a class="btn btn-primary" href="#">Install</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="Network HUD" data-tags="ui network telemetry" data-description="Live server telemetry overlays and player-facing network diagnostics." data-version-track="0.x" data-rating="4.7">
+              <div class="market-icon">NH</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>Network HUD</h3>
+                  <span class="market-version">v0.8.4</span>
+                </div>
+                <p>Live server telemetry overlays and player-facing network diagnostics.</p>
+                <div class="market-tags">
+                  <span>ui</span>
+                  <span>network</span>
+                  <span>telemetry</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>410K</strong>
+                <span>Downloads</span>
+                <strong>4.7</strong>
+                <span>Rating</span>
+                <a class="btn btn-primary" href="#">Install</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="Arena Architect" data-tags="combat worldgen maps" data-description="Procedural arena templates with balancing presets for PvP and events." data-version-track="1.x" data-rating="4.6">
+              <div class="market-icon">AA</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>Arena Architect</h3>
+                  <span class="market-version">v1.2.3</span>
+                </div>
+                <p>Procedural arena templates with balancing presets for PvP and events.</p>
+                <div class="market-tags">
+                  <span>combat</span>
+                  <span>worldgen</span>
+                  <span>maps</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>330K</strong>
+                <span>Downloads</span>
+                <strong>4.6</strong>
+                <span>Rating</span>
+                <a class="btn btn-primary" href="#">Install</a>
+              </div>
+            </article>
           </div>
         </div>
-      </section>
-
-      <section id="market-trending" class="doc-section reveal" data-api-item="trending plugins">
-        <div class="section-head">
-          <p class="eyebrow">TRENDING</p>
-          <h2>Most Active This Week</h2>
-        </div>
-        <article class="api-card">
-          <ul>
-            <li>NetX Economies</li>
-            <li>WildGrid Terrain</li>
-            <li>Clockwork Create Lite</li>
-          </ul>
-        </article>
-      </section>
-
-      <section id="market-new" class="doc-section reveal" data-api-item="new plugins releases">
-        <div class="section-head">
-          <p class="eyebrow">NEW</p>
-          <h2>Latest Releases</h2>
-        </div>
-        <article class="api-card">
-          <ul>
-            <li>Factory UI Kit v0.3.0</li>
-            <li>Raid Director v1.0.0</li>
-            <li>Network HUD v0.8.4</li>
-          </ul>
-        </article>
       </section>
     </div>
   </main>
