--- a/website/marketplace.html
+++ b/website/marketplace.html
@@ -32,18 +32,18 @@
     <aside class="sidebar reveal">
       <div class="filter-group">
         <h3>Filters</h3>
-        <span class="filter-label">Version Track</span>
+        <span class="filter-label">Minecraft Version</span>
         <label class="filter-check">
-          <input type="checkbox" class="market-version-filter" value="2.x" />
-          <span>2.x</span>
+          <input type="checkbox" class="market-version-filter" value="1.21.x" />
+          <span>1.21.x</span>
         </label>
         <label class="filter-check">
-          <input type="checkbox" class="market-version-filter" value="1.x" />
-          <span>1.x</span>
+          <input type="checkbox" class="market-version-filter" value="1.20.x" />
+          <span>1.20.x</span>
         </label>
         <label class="filter-check">
-          <input type="checkbox" class="market-version-filter" value="0.x" />
-          <span>0.x</span>
+          <input type="checkbox" class="market-version-filter" value="1.19.x" />
+          <span>1.19.x</span>
         </label>
       </div>
 
@@ -58,17 +58,13 @@
           <button class="market-chip" type="button" data-filter="admin">Admin</button>
           <button class="market-chip" type="button" data-filter="network">Network</button>
           <button class="market-chip" type="button" data-filter="ui">UI</button>
+          <button class="market-chip" type="button" data-filter="performance">Performance</button>
+          <button class="market-chip" type="button" data-filter="utility">Utility</button>
+          <button class="market-chip" type="button" data-filter="minigames">Minigames</button>
+          <button class="market-chip" type="button" data-filter="social">Social</button>
+          <button class="market-chip" type="button" data-filter="devtools">Devtools</button>
+          <button class="market-chip" type="button" data-filter="moderation">Moderation</button>
         </div>
-      </div>
-
-      <div class="filter-group">
-        <label class="filter-label" for="market-rating-filter">Minimum Rating</label>
-        <select id="market-rating-filter" class="filter-select">
-          <option value="0">Any</option>
-          <option value="4.0">4.0+</option>
-          <option value="4.5">4.5+</option>
-          <option value="4.8">4.8+</option>
-        </select>
       </div>
 
       <button type="button" class="btn btn-ghost" id="market-reset-filters">Reset Filters</button>
@@ -80,6 +76,9 @@
         <h1>Clockwork Plugin Marketplace</h1>
         <p class="lead">
           One wide plugin board with fast search and category filters. Find plugins by name, tags, and descriptions in one place.
+        </p>
+        <p class="lead" style="font-size:0.95rem;">
+          These cards are wired to the repository folder <code>showcase-plugins/</code> (source + README per plugin).
         </p>
         <div class="pill-row">
           <span class="pill">Unified Catalog</span>
@@ -100,187 +99,147 @@
           </div>
 
           <div class="market-grid" id="market-grid">
-            <article class="market-card" data-name="Clockwork Create Lite" data-tags="automation machines recipes" data-description="Create-like machines, rotation systems, and recipe flow for the standalone core." data-version-track="0.x" data-rating="4.8">
-              <div class="market-icon">CW</div>
+            <article class="market-card" data-name="Nick" data-tags="social admin utility ui" data-description="Change display name with /nick and assign a skin alias with /nick-skin in showcase mode." data-mc-versions="1.21.x" data-rating="4.7">
+              <div class="market-icon">NK</div>
               <div class="market-main">
                 <div class="market-head">
-                  <h3>Clockwork Create Lite</h3>
-                  <span class="market-version">v0.9.2</span>
+                  <h3>Nick</h3>
+                  <span class="market-version">showcase 1.0.0</span>
                 </div>
-                <p>Create-like machines, rotation systems, and recipe flow for the standalone core.</p>
+                <p>Use <code>/nick</code> and <code>/nick-skin</code> to simulate identity + skin alias flow for Clockwork plugins.</p>
                 <div class="market-tags">
-                  <span>automation</span>
-                  <span>machines</span>
-                  <span>recipes</span>
+                  <span>social</span>
+                  <span>admin</span>
+                  <span>utility</span>
                 </div>
               </div>
               <div class="market-meta">
-                <strong>1.2M</strong>
-                <span>Downloads</span>
+                <strong>Showcase</strong>
+                <span>Type</span>
+                <strong>4.7</strong>
+                <span>Sample Score</span>
+                <a class="btn btn-primary" href="../showcase-plugins/nick/src/main/kotlin/com/clockwork/showcase/nick/NickPlugin.kt">Source</a>
+                <a class="btn btn-ghost" href="../showcase-plugins/nick/README.md">README</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="Godmode" data-tags="admin combat utility moderation" data-description="Admin-only /godmode toggle. Players can still be hit, but receive no damage while enabled." data-mc-versions="1.21.x" data-rating="4.8">
+              <div class="market-icon">GD</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>Godmode</h3>
+                  <span class="market-version">showcase 1.0.0</span>
+                </div>
+                <p>Admin-only invulnerability showcase with command control and lightweight runtime state.</p>
+                <div class="market-tags">
+                  <span>admin</span>
+                  <span>combat</span>
+                  <span>moderation</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>Showcase</strong>
+                <span>Type</span>
                 <strong>4.8</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
+                <span>Sample Score</span>
+                <a class="btn btn-primary" href="../showcase-plugins/godmode/src/main/kotlin/com/clockwork/showcase/godmode/GodmodePlugin.kt">Source</a>
+                <a class="btn btn-ghost" href="../showcase-plugins/godmode/README.md">README</a>
               </div>
             </article>
 
-            <article class="market-card" data-name="Admin Guardrails" data-tags="admin security ops" data-description="Permission bundles, command auditing, and runtime recommendations for operators." data-version-track="2.x" data-rating="4.9">
-              <div class="market-icon">AD</div>
+            <article class="market-card" data-name="Veinminer" data-tags="utility performance automation worldgen" data-description="Mine a full connected ore vein at once with delay scaling based on vein size." data-mc-versions="1.21.x" data-rating="4.9">
+              <div class="market-icon">VM</div>
               <div class="market-main">
                 <div class="market-head">
-                  <h3>Admin Guardrails</h3>
-                  <span class="market-version">v2.1.1</span>
+                  <h3>Veinminer</h3>
+                  <span class="market-version">showcase 1.0.0</span>
                 </div>
-                <p>Permission bundles, command auditing, and runtime recommendations for operators.</p>
+                <p>Connected ore mining with configurable max scan and slower resolution for very large veins.</p>
                 <div class="market-tags">
-                  <span>admin</span>
-                  <span>security</span>
-                  <span>ops</span>
-                </div>
-              </div>
-              <div class="market-meta">
-                <strong>1.9M</strong>
-                <span>Downloads</span>
-                <strong>4.9</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
-              </div>
-            </article>
-
-            <article class="market-card" data-name="NetX Economies" data-tags="economy admin network" data-description="Transactions, shop adapters, and profile-based pricing rules with audit trails." data-version-track="1.x" data-rating="4.6">
-              <div class="market-icon">NX</div>
-              <div class="market-main">
-                <div class="market-head">
-                  <h3>NetX Economies</h3>
-                  <span class="market-version">v1.4.0</span>
-                </div>
-                <p>Transactions, shop adapters, and profile-based pricing rules with audit trails.</p>
-                <div class="market-tags">
-                  <span>economy</span>
-                  <span>admin</span>
-                  <span>network</span>
-                </div>
-              </div>
-              <div class="market-meta">
-                <strong>870K</strong>
-                <span>Downloads</span>
-                <strong>4.6</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
-              </div>
-            </article>
-
-            <article class="market-card" data-name="WildGrid Terrain" data-tags="worldgen terrain biomes" data-description="Deterministic biome layers and custom world generation profiles for adventure servers." data-version-track="0.x" data-rating="4.7">
-              <div class="market-icon">WG</div>
-              <div class="market-main">
-                <div class="market-head">
-                  <h3>WildGrid Terrain</h3>
-                  <span class="market-version">v0.7.5</span>
-                </div>
-                <p>Deterministic biome layers and custom world generation profiles for adventure servers.</p>
-                <div class="market-tags">
-                  <span>worldgen</span>
-                  <span>terrain</span>
-                  <span>biomes</span>
-                </div>
-              </div>
-              <div class="market-meta">
-                <strong>510K</strong>
-                <span>Downloads</span>
-                <strong>4.7</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
-              </div>
-            </article>
-
-            <article class="market-card" data-name="Raid Director" data-tags="combat ai events" data-description="Encounter wave orchestration, raid scaling, and dynamic boss routing." data-version-track="1.x" data-rating="4.5">
-              <div class="market-icon">RD</div>
-              <div class="market-main">
-                <div class="market-head">
-                  <h3>Raid Director</h3>
-                  <span class="market-version">v1.0.0</span>
-                </div>
-                <p>Encounter wave orchestration, raid scaling, and dynamic boss routing.</p>
-                <div class="market-tags">
-                  <span>combat</span>
-                  <span>ai</span>
-                  <span>events</span>
-                </div>
-              </div>
-              <div class="market-meta">
-                <strong>290K</strong>
-                <span>Downloads</span>
-                <strong>4.5</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
-              </div>
-            </article>
-
-            <article class="market-card" data-name="Factory UI Kit" data-tags="ui automation tools" data-description="Reusable machine dashboards and operator panels for plugin UIs." data-version-track="0.x" data-rating="4.4">
-              <div class="market-icon">UI</div>
-              <div class="market-main">
-                <div class="market-head">
-                  <h3>Factory UI Kit</h3>
-                  <span class="market-version">v0.3.0</span>
-                </div>
-                <p>Reusable machine dashboards and operator panels for plugin UIs.</p>
-                <div class="market-tags">
-                  <span>ui</span>
+                  <span>utility</span>
+                  <span>performance</span>
                   <span>automation</span>
-                  <span>tools</span>
                 </div>
               </div>
               <div class="market-meta">
-                <strong>120K</strong>
-                <span>Downloads</span>
-                <strong>4.4</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
+                <strong>Showcase</strong>
+                <span>Type</span>
+                <strong>4.9</strong>
+                <span>Sample Score</span>
+                <a class="btn btn-primary" href="../showcase-plugins/veinminer/src/main/kotlin/com/clockwork/showcase/veinminer/VeinminerPlugin.kt">Source</a>
+                <a class="btn btn-ghost" href="../showcase-plugins/veinminer/README.md">README</a>
               </div>
             </article>
 
-            <article class="market-card" data-name="Network HUD" data-tags="ui network telemetry" data-description="Live server telemetry overlays and player-facing network diagnostics." data-version-track="0.x" data-rating="4.7">
-              <div class="market-icon">NH</div>
+            <article class="market-card" data-name="Guarded" data-tags="admin moderation utility worldgen" data-description="WorldEdit-style area guarding with commands for build, break, and PvP restrictions." data-mc-versions="1.21.x" data-rating="4.6">
+              <div class="market-icon">GR</div>
               <div class="market-main">
                 <div class="market-head">
-                  <h3>Network HUD</h3>
-                  <span class="market-version">v0.8.4</span>
+                  <h3>Guarded</h3>
+                  <span class="market-version">showcase 1.0.0</span>
                 </div>
-                <p>Live server telemetry overlays and player-facing network diagnostics.</p>
+                <p>Select cuboids and enforce per-area policy for protected building and PvP control.</p>
                 <div class="market-tags">
-                  <span>ui</span>
-                  <span>network</span>
-                  <span>telemetry</span>
+                  <span>admin</span>
+                  <span>moderation</span>
+                  <span>utility</span>
                 </div>
               </div>
               <div class="market-meta">
-                <strong>410K</strong>
-                <span>Downloads</span>
-                <strong>4.7</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
-              </div>
-            </article>
-
-            <article class="market-card" data-name="Arena Architect" data-tags="combat worldgen maps" data-description="Procedural arena templates with balancing presets for PvP and events." data-version-track="1.x" data-rating="4.6">
-              <div class="market-icon">AA</div>
-              <div class="market-main">
-                <div class="market-head">
-                  <h3>Arena Architect</h3>
-                  <span class="market-version">v1.2.3</span>
-                </div>
-                <p>Procedural arena templates with balancing presets for PvP and events.</p>
-                <div class="market-tags">
-                  <span>combat</span>
-                  <span>worldgen</span>
-                  <span>maps</span>
-                </div>
-              </div>
-              <div class="market-meta">
-                <strong>330K</strong>
-                <span>Downloads</span>
+                <strong>Showcase</strong>
+                <span>Type</span>
                 <strong>4.6</strong>
-                <span>Rating</span>
-                <a class="btn btn-primary" href="#">Install</a>
+                <span>Sample Score</span>
+                <a class="btn btn-primary" href="../showcase-plugins/guarded/src/main/kotlin/com/clockwork/showcase/guarded/GuardedPlugin.kt">Source</a>
+                <a class="btn btn-ghost" href="../showcase-plugins/guarded/README.md">README</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="SoftAnticheat" data-tags="moderation combat admin performance" data-description="Lightweight anti-cheat that detects repeated suspicious movement spikes." data-mc-versions="1.21.x" data-rating="4.5">
+              <div class="market-icon">SA</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>SoftAnticheat</h3>
+                  <span class="market-version">showcase 1.0.0</span>
+                </div>
+                <p>Conservative movement anomaly detection with strike windows and automatic kicks.</p>
+                <div class="market-tags">
+                  <span>moderation</span>
+                  <span>combat</span>
+                  <span>performance</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>Showcase</strong>
+                <span>Type</span>
+                <strong>4.5</strong>
+                <span>Sample Score</span>
+                <a class="btn btn-primary" href="../showcase-plugins/softanticheat/src/main/kotlin/com/clockwork/showcase/softanticheat/SoftAnticheatPlugin.kt">Source</a>
+                <a class="btn btn-ghost" href="../showcase-plugins/softanticheat/README.md">README</a>
+              </div>
+            </article>
+
+            <article class="market-card" data-name="Restocker" data-tags="utility admin automation economy" data-description="Configurable villager restock loop and status commands for operator tuning." data-mc-versions="1.21.x" data-rating="4.4">
+              <div class="market-icon">RS</div>
+              <div class="market-main">
+                <div class="market-head">
+                  <h3>Restocker</h3>
+                  <span class="market-version">showcase 1.0.0</span>
+                </div>
+                <p>Set custom restock intervals for villagers and track restock metadata in host entity data.</p>
+                <div class="market-tags">
+                  <span>utility</span>
+                  <span>admin</span>
+                  <span>economy</span>
+                </div>
+              </div>
+              <div class="market-meta">
+                <strong>Showcase</strong>
+                <span>Type</span>
+                <strong>4.4</strong>
+                <span>Sample Score</span>
+                <a class="btn btn-primary" href="../showcase-plugins/restocker/src/main/kotlin/com/clockwork/showcase/restocker/RestockerPlugin.kt">Source</a>
+                <a class="btn btn-ghost" href="../showcase-plugins/restocker/README.md">README</a>
               </div>
             </article>
           </div>
