website: redeploy pages and fix root redirect path

--- a/website/documentation.html
+++ b/website/documentation.html
@@ -726,6 +726,9 @@ adapter invoke &lt;plugin&gt; &lt;adapterId&gt; &lt;action&gt; [k=v ...] [--json
     <p>Clockwork Docs • Standalone API • Kotlin-first</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./supabase-config.js"></script>
+  <script src="./admin-header.js"></script>
   <script src="./app.js"></script>
 </body>
 </html>
