--- a/website/index.html
+++ b/website/index.html
@@ -278,6 +278,9 @@
     <p>Clockwork Main • Standalone Minecraft Server Software</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./supabase-config.js"></script>
+  <script src="./admin-header.js"></script>
   <script src="./app.js"></script>
 </body>
 </html>
