--- a/website/admin-portal.html
+++ b/website/admin-portal.html
@@ -114,7 +114,8 @@
           <p class="eyebrow">QUEUE</p>
           <h2>Submitted Plugins</h2>
         </div>
-        <p class="admin-note">Tip: The marketplace installs compiled artifacts (usually `.jar`). `.kt` files are source code and should be shipped as source archives.</p>
+        <p class="admin-note">Pipeline: <code>draft -> review -> approved -> published</code>. Publish is blocked until validation is <code>valid</code>.</p>
+        <p class="admin-note">Tip: The marketplace installs compiled artifacts (usually <code>.jar</code>). <code>.kt</code> files are source code and should be shipped as source archives.</p>
         <div id="admin-submission-list" class="admin-submissions"></div>
       </section>
 
