packaging: ship direct windows exe installers and main-page links

--- a/website/index.html
+++ b/website/index.html
@@ -79,6 +79,23 @@
             <li><a href="./documentation.html#quickstart">Open Quickstart in Documentation</a></li>
             <li><a href="./marketplace.html">Browse Marketplace</a></li>
           </ul>
+          <div class="pill-row" style="margin-top: 1rem;">
+            <a
+              class="btn btn-primary"
+              href="https://github.com/Lianomeister/Clockwork/releases/latest/download/clockwork-server-windows-1.8.2.exe"
+            >
+              Download Server EXE (Windows)
+            </a>
+            <a
+              class="btn btn-ghost"
+              href="https://github.com/Lianomeister/Clockwork/releases/latest/download/clockwork-cli-windows-1.8.2.exe"
+            >
+              Download CLI EXE (Windows)
+            </a>
+          </div>
+          <p style="margin-top: 0.7rem; opacity: 0.82; font-size: 0.9rem;">
+            One click downloads from the latest release, each bundle includes the corresponding .exe launcher.
+          </p>
         </article>
       </section>
 
