--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -82,13 +82,13 @@
           <div class="pill-row" style="margin-top: 1rem;">
             <a
               class="btn btn-primary"
-              href="https://github.com/Lianomeister/Clockwork/releases/latest/download/clockwork-server-windows-1.8.2.exe"
+              href="https://github.com/Lianomeister/Clockwork/releases/latest/download/clockwork-server-windows-0.18.3.exe"
             >
               Download Server EXE (Windows)
             </a>
             <a
               class="btn btn-ghost"
-              href="https://github.com/Lianomeister/Clockwork/releases/latest/download/clockwork-cli-windows-1.8.2.exe"
+              href="https://github.com/Lianomeister/Clockwork/releases/latest/download/clockwork-cli-windows-0.18.3.exe"
             >
               Download CLI EXE (Windows)
             </a>
